--- a/alaska.html
+++ b/alaska.html
@@ -14,10 +14,10 @@ var t = new Date(document.lastModified);
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </center>
 <H1><CENTER> the Norris 1999 Alaskan Cruise </CENTER></H1>
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
-
-<p align=center> 
+<center><h3>
+<p > 
 July, 1999 We flew to Vancouver, BC to begin our cruise
 <p>
 <img src="alaska/r0100060.jpg">
@@ -27,7 +27,7 @@ July, 1999 We flew to Vancouver, BC to begin our cruise
 <img src="alaska/r0100064.jpg">
 <img src="alaska/r0100063.jpg">
 <img src="alaska/r0100066.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 Onboard the Rhapsody of the Seas (we were the very first passengers onboard!)
@@ -36,7 +36,7 @@ Onboard the Rhapsody of the Seas (we were the very first passengers onboard!)
 <img src="alaska/r0100065.jpg">
 <img src="alaska/r0100083.jpg">
 <img src="alaska/r0100082.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 Scenery along the "Inside Passage"
@@ -51,7 +51,7 @@ Scenery along the "Inside Passage"
 <img src="alaska/r0100080.jpg">
 <img src="alaska/r0100081.jpg">
 <img src="alaska/r0100084.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 We dock at Skagway, AK. Daniel & I rode the train to the the top of White Pass
@@ -59,7 +59,7 @@ We dock at Skagway, AK. Daniel & I rode the train to the the top of White Pass
 <img src="alaska/r0100073.jpg">
 <img src="alaska/r0100074.jpg">
 <img src="alaska/r0100075.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 Haines, AK
@@ -67,7 +67,7 @@ Haines, AK
 <img src="alaska/r0100077.jpg">
 <img src="alaska/r0100078.jpg">
 <img src="alaska/r0100079.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 Hubbard Glacier
@@ -78,7 +78,7 @@ Hubbard Glacier
 <img src="alaska/r0100088.jpg">
 <img src="alaska/r0100089.jpg">
 <img src="alaska/r0100090.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 Ketchikan, AK
@@ -88,7 +88,7 @@ Ketchikan, AK
 <img src="alaska/r0100094.jpg">
 <img src="alaska/r0100091.jpg">
 <img src="alaska/r0100092.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <p align=center> 
 I took a seaplane flight over the Misty Fijords National Monument
@@ -106,7 +106,7 @@ I took a seaplane flight over the Misty Fijords National Monument
 <img src="alaska/r0100105.jpg">
 <img src="alaska/r0100106.jpg">
 <img src="alaska/r0100107.jpg">
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 <p align=center> 
 We landed on a small lake, and got out onto the pontoons
 <p>
@@ -115,11 +115,13 @@ We landed on a small lake, and got out onto the pontoons
 <img src="alaska/r0100102.jpg">
 <img src="alaska/r0100103.jpg">
 <img src="alaska/r0100104.jpg">
-<hr size=3 width=90%> 
-<center>Finished!</center>
+<hr size=3 width=50%> 
+Finished!
+</center>
+</h3>
 <br>
 
-<hr size=3 width=90%> 
+<hr size=3 width=50%> 
 
 <!----------------------->
 
