gwatch auto-commit

--- a/webcam/webcam.html
+++ b/webcam/webcam.html
@@ -18,7 +18,7 @@
 
     <TD WIDTH="50%" bgcolor=red>
       <P><CENTER>&nbsp; <FONT FACE=Arial Size=2 color=white>Image updates every 10 minutes
-      <IMG SRC="https://www.dnorris.net/webcam/webcam.jpg"  WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
+      <IMG SRC="webcam/webcam.jpg"  WIDTH="320" HEIGHT="240" ALIGN="BOTTOM">
       <BR><FONT FACE=Arial Size=2>
       <A HREF="https://drive.google.com/open?id=1XuV7dU4NaRL1XCYStKG0nVNX3DyGpvaL">Dave's Lucasville Cam</A></CENTER>
     </TD>
