--- a/osu07.html
+++ b/osu07.html
@@ -12,37 +12,27 @@
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p>
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
-</SCRIPT> </p>
-
-<center><h2>OHIO STATE BUCKEYES Football Schedule </h2></center>
+</SCRIPT> 
+<center><h2> OHIO STATE BUCKEYES Football Schedule </h2></center>
 <center><h1> 2007 </h1>
 <table border="1" align="center">
 
 <td>Sep 01</td><td><A href="http://www.ysu.edu/sports/football/index.htm"> Youngstown State </a> </td><td>Noon BTN </td><td>  W 38 - 6</td><td> Lots of new faces; TB 17/23,2TD </td></tr>
 <td>Sep 08</td><td><A href="http://www.gozips.com/"> Akron </a> </td><td>Noon BTN </td><td>  W 20 - 2</td><td> slow start, hot, muggy, rainy, sunny </td></tr>
 <td>Sep 15</td><td><A href="http://gohuskies.cstv.com/sports/m-footbl/wash-m-footbl-body.html"> @Washington </a> </td><td>3:30 ESPN </td><td>  W 33 - 14</td><td> down 3-7 at half, Offense wakes up </td></tr>
-
 <td>Sep 22</td><td><A href="http://www.nusports.com/sports/m-footbl/"> Northwestern </a> </td><td>3:30 ESPN </td><td>  W 58 - 7</td><td> Over in Q1, Robiskie 3 catches, 3 TD's </td></tr>
-
 <td>Sep 29</td><td><A href="http://www.gophersports.com/mFball/"> @ Minnesota </a> </td><td>8:00 EDT ESPN2 </td><td>  W 30 - 7</td><td> TB 2 TD, CW 2 TD </td></tr>
-
-<td>Oct  06</td><td><A href="http://purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> @ Purdue </a> </td><td>8:00 EDT ABC </td><td>  W 23 - 7</td><td> TB 2 TD, PU score w/:15 left</td></tr>
-
+<td>Oct 06</td><td><A href="http://purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> @ Purdue </a> </td><td>8:00 EDT ABC </td><td>  W 23 - 7</td><td> TB 2 TD, PU score w/:15 left</td></tr>
 <td>Oct 13</td><td><A href="http://www.kentstatesports.com/"> Kent State </a> </td><td>Noon BTN </td><td>  W 48 - 3</td><td> TB 2 TD, Hartline 90 yd punt return </td></tr>
-
-<td>Oct  20</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> Michigan State </a> </td><td>3:30 EDT ABC </td><td>  W 24 - 17</td><td> Up 24-0, Offense gave up 2 TD  </td><td> </td></tr>
-
+<td>Oct 20</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> Michigan State </a> </td><td>3:30 EDT ABC </td><td>  W 24 - 17</td><td> Up 24-0, Offense gave up 2 TD  </td></tr>
 <td>Oct 27</td><td><A href="http://www.gopsusports.com/football//"> @ Penn State </a> </td><td>8:00 EDT ABC </td><td>  W 37 - 17 </td><td> TB 3 TD's, CW 133 yds, no punts </td></tr>
-
 <td>Nov 03</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> Wisconsin </a> </td><td> Noon BTN </td><td>  W 38 - 17 </td><td> TB 2 TD, Beanie 3 TD </td></tr>
-
-<td>Nov  10</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> Illinois </a> </td><td>3:30 ABC</td><td> <font color = red>L 21 - 28  </font></td><td> threw 3 INT's </td></tr>
-
-<td>Nov  17</td><td><A href="http://mgoblue.com/football/"> @ scUM </a>  </td><td>Noon ABC </td><td> W 14 - 3</td><td> CW 222 yds, 2 TD, great D </td></tr>
+<td>Nov 10</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> Illinois </a> </td><td>3:30 ABC</td><td> <font color = red>L 21 - 28  </font></td><td> threw 3 INT's </td></tr>
+<td>Nov 17</td><td><A href="http://mgoblue.com/football/"> @ scUM </a>  </td><td>Noon ABC </td><td> W 14 - 3</td><td> CW 222 yds, 2 TD, great D </td></tr>
 </table>
 
 <center><font color = red><h2>Outright Big Ten Champs </center></h2> </font>
@@ -51,8 +41,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <p><center> and M*ch*g*n still sucks!</center>
 <br></p>
-<br></p>
-<p align=center>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
-
+<br><center>
+<p>&copy; 2008 D. Norris Inc., Property of Dr Dave</p
 </body>
 </html>
