--- a/osu09.html
+++ b/osu09.html
@@ -9,23 +9,18 @@
    <title>The 2009 OSU Football Season</title>
 </head>
 <body <BODY  background="Images/bg-bkgrd.gif" bgproperties="fixed" bgcolor="#CCCCCC" >
-<p align=center>
+<p>
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p>
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
 </SCRIPT> </p>
 
-
-
-<hr align=center color=red>
-<CENTER><!IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT=""></CENTER>
-
 <center><h2>OHIO STATE BUCKEYES <a href="http://www.ohiostatebuckeyes.com//SportSelect.dbml?ATCLID=&DB_MENU_ID=&CARTKEY=&PALBID=&DB_OEM_ID=17300&SPID=10408&SPSID=87745">Football </a> Schedule </h2></center>
-<!..................................................................................................>
+<!---------------------------------------------------------------------------->
 <center><h1> 2009 </h1><br>
 <table border="1" align="center" >
 <td>Sept 05</td><td><A href="http://navysports.cstv.com/sports/m-footbl/navy-m-footbl-body.html"> Navy </a> </td><td> Noon ESPN </td><td> W 31 - 27 </td><td> young team, several mistakes, but a good test </td></tr>
@@ -41,7 +36,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Nov  14</td><td><A href="http://www.hawkeyesports.com/football/index.htm"> Iowa   </a> </td><td> 3:30 ABC </td><td> W 27 - 24 OT </td><td>  Tough game, but Bucks clinch B10 Title, go to Rose Bowl </td></tr>
 <td>Nov  21</td><td><A href="http://www.umich.edu/~mgoblue/Football/"> @ scUM  </a> </td><td> 12:00 ABC </td><td> W 21 - 10 </td><td> Won Big Ten outright, JT 8-1, 6 in a row. </td></tr>
 </table>
-<!......................................................................................................>
+<!------------------------------------------------------------------------------->
 
 <center><font color = red><h2>Go Bucks!!! </center></h2> </font>
 <center><h2>Jan 1, 2010 <a href="http://www.tournamentofroses.com/rosebowlgame/"> Rose Bowl </a> vs. Oregon - Won 26 - 17 </center>  </h2> 
@@ -49,6 +44,6 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <p><center> and M*ch*g*n still sucks!</center>
 <br></p>
-<p align=center>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
+<p>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
 </body>
 </html>
