--- a/osu10.html
+++ b/osu10.html
@@ -8,11 +8,11 @@
    <title>The 2010 OSU Football Season</title>
 </head>
 <body bgcolor="#CCCCCC" background="bg-bkgrd.gif">
-<p align=center>
+<p>
 
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p>
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
@@ -22,31 +22,19 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2010 </h1>
 <table border="1" align="center">
 
-<td>Sept 02</td><td><A href="http://www.herdzone.com/sports/football/"> Marshall </a>(Alumni Band)  </td><td> 7:30 Thurs. BTN </td><td> W 45 - 07</td><td> TP looked good, 15/22 for 244 yds, 3 TD's </font></td></tr>
-
-<td>Sept 11</td><td><A href="http://hurricanesports.cstv.com/sports/m-footbl/mifl-m-footbl-body.html"> U of Miami </a> </td><td> 3:40 ESPN  </td><td>  W 36 - 24 </td><td> gave up 2 ST TD's, got 4 Ints </td></tr>
-
-<td>Sept 18</td><td><A href="http://ohiobobcats.cstv.com/sports/m-footbl/ohio-m-footbl-body.html"> Ohio U </a>  </td><td> Noon BTN </td><td>  W 43 - 07 </td><td> TP with record 16 straight completions, 2 TD's, 2 INTs </td></tr>
-
-<td>Sept 25</td><td><A href="http://www.emueagles.com/index.asp?path=football"> Eastern Michigan </a>  </td><td> 3:30 ABC/ESPN </td><td>  W 73 - 20 </td><td> TP 6 TD's(4 pass, 1 run, 1 caught) most points since 1950</td></tr>
-
-<td>Oct 2</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> Noon BTN   </td><td>  W 24 - 13 </td><td> TP 104 yds, 2 TDs, hurt leg </td></tr>
-
-<td>Oct  09</td><td><A href="http://www.iuhoosiers.com/index.html"> Indiana </a> </td><td> Noon ESPN/2  </td><td>  W 38 - 10</td><td> TP 334 yds passing, 3 TD</td></tr>
-
-<td>Oct  16</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 7:00 ESPN/2  </td><td> <font color = red> L 18 - 31 </font> </td><td>poor performance all around </td></tr>
-
-<td>Oct  23</td><td><A href="http://www.purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> Noon BTN  </td><td>  W 49 - 0</td><td> TP 3 TD, 2 INT  </td><td> </td></tr>
-
-<td>Oct  30</td><td><A href="http://www.gophersports.com/mFball/"> @ Minnesota </a> </td><td> 8:00 ABC/ESPN/2 </td><td>  W 52 - 10 </td><td> Herron 114 yds in the first half, TP 3 TDs  </td></tr>
-
-<td>Nov  06 </td><td><A href="http://www."> Bye </a> </td><td> . </td><td>  . </td><td> . </td></tr>
-
-<td>Nov  13</td><td><A href="http://www.gopsusports.com/football/"> Penn State </a> </td><td> 3:30 ABC </td><td> W 38 - 14</td><td> Slow start, down 14-3 at half, scored 5 TDs in second half, 2 by D </td></tr>
-
-<td>Nov  20</td><td><A href="http://hawkeyesports.com/football/index.htm"> @ Iowa </a> </td><td> TBA </td><td>  W 20 - 17</td><td> Another close, come-from-behind game. TP 1 TD, 2 INT, Boom 1 TD </td></tr>
-
-<td>Nov  27</td><td><A href="http://mgoblue.com/football/">scUM </a> </td><td> 12:00 ABC </td><td> W 37 - 7</td><td> TP with 2 TDs & 1 Int, Hall 85 KO return TD, Boom 175 yds & 1 TD </td></tr>
+<td>Sep 02</td><td><A href="http://www.herdzone.com/sports/football/"> Marshall </a>(Alumni Band)  </td><td> 7:30 Thurs. BTN </td><td> W 45 - 07</td><td> TP looked good, 15/22 for 244 yds, 3 TD's </td></tr>
+<td>Sep 11</td><td><A href="http://hurricanesports.cstv.com/sports/m-footbl/mifl-m-footbl-body.html"> U of Miami </a> </td><td> 3:40 ESPN  </td><td>  W 36 - 24 </td><td> gave up 2 ST TD's, got 4 Ints </td></tr>
+<td>Sep 18</td><td><A href="http://ohiobobcats.cstv.com/sports/m-footbl/ohio-m-footbl-body.html"> Ohio U </a>  </td><td> Noon BTN </td><td>  W 43 - 07 </td><td> TP with record 16 straight completions, 2 TD's, 2 INTs </td></tr>
+<td>Sep 25</td><td><A href="http://www.emueagles.com/index.asp?path=football"> Eastern Michigan </a>  </td><td> 3:30 ABC/ESPN </td><td>  W 73 - 20 </td><td> TP 6 TD's(4 pass, 1 run, 1 caught) most points since 1950</td></tr>
+<td>Oct 02</td><td><A href="http://fightingillini.ocsn.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> Noon BTN   </td><td>  W 24 - 13 </td><td> TP 104 yds, 2 TDs, hurt leg </td></tr>
+<td>Oct 09</td><td><A href="http://www.iuhoosiers.com/index.html"> Indiana </a> </td><td> Noon ESPN/2  </td><td>  W 38 - 10</td><td> TP 334 yds passing, 3 TD</td></tr>
+<td>Oct 16</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 7:00 ESPN/2  </td><td> <font color = red> L 18 - 31 </font> </td><td>poor performance all around </td></tr>
+<td>Oct 23</td><td><A href="http://www.purduesports.ocsn.com/sports/m-footbl/pur-m-footbl-body.html"> Purdue </a> </td><td> Noon BTN  </td><td>  W 49 - 0</td><td> TP 3 TD, 2 INT  </td></tr>
+<td>Oct 30</td><td><A href="http://www.gophersports.com/mFball/"> @ Minnesota </a> </td><td> 8:00 ABC/ESPN/2 </td><td>  W 52 - 10 </td><td> Herron 114 yds in the first half, TP 3 TDs  </td></tr>
+<td>Nov 06</td><td><A href="http://www."> Bye </a> </td><td> . </td><td>  . </td><td> . </td></tr>
+<td>Nov 13</td><td><A href="http://www.gopsusports.com/football/"> Penn State </a> </td><td> 3:30 ABC </td><td> W 38 - 14</td><td> Slow start, down 14-3 at half, scored 5 TDs in second half, 2 by D </td></tr>
+<td>Nov 20</td><td><A href="http://hawkeyesports.com/football/index.htm"> @ Iowa </a> </td><td> TBA </td><td>  W 20 - 17</td><td> Another close, come-from-behind game. TP 1 TD, 2 INT, Boom 1 TD </td></tr>
+<td>Nov 27</td><td><A href="http://mgoblue.com/football/">scUM </a> </td><td> 12:00 ABC </td><td> W 37 - 7</td><td> TP with 2 TDs & 1 Int, Hall 85 KO return TD, Boom 175 yds & 1 TD </td></tr>
 </table>
 
 <center><font color = red><h2> Big Ten Champs </center></h2> </font>
@@ -56,7 +44,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p><center> and M*ch*g*n still sucks!</center>
 <br></p>
 <br></p>
-<p align=center>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
+<p>&copy; 2008 D. Norris Inc., Property of Dr Dave</p>
 
 </body>
 </html>
