--- a/osu06.html
+++ b/osu06.html
@@ -7,13 +7,12 @@
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
 
 <!-- LAST MODIFIED DATE -->
-<p align=center>
+<p>
 <SCRIPT LANGUAGE="JavaScript">
 var t = new Date(document.lastModified); 
 document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>"); 
-</SCRIPT> </p>
-
-<p>
+</SCRIPT> 
+<center><h2> OHIO STATE BUCKEYES Football Schedule </h2></center>
 <center><h1> 2006 </h1><br>
 <table border="1" align="center" >
 
@@ -30,7 +29,7 @@ Pittman, Robiskie, & D with 2 TD's, rainy </td></tr>
 
 <td>Oct  07</td><td><A href="http://bgsufalcons.collegesports.com/"> Bowling Green </a> 3:30 ESPN+</td><td>  W 35 - 7 </td><td> TS with 3 TD throws, AP with 2 TD runs </td></tr>
 
-<td>Oct  14</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> 3:30 ABC</td><td>  W 38 - 7 </td><td> TS 2 TD passes, TG2 punt return TD  </td><td> </td></tr>
+<td>Oct  14</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> 3:30 ABC</td><td>  W 38 - 7 </td><td> TS 2 TD passes, TG2 punt return TD  </td></tr>
 
 <td>Oct  21</td><td><A href="http://iuhoosiers.com/index.html"> Indiana </a> Noon ESPU only</td><td>  W 44 - 3 </td><td> TS with 4 TD throws, TG2 with 1 </td></tr>
 
@@ -52,7 +51,7 @@ Pittman, Robiskie, & D with 2 TD's, rainy </td></tr>
 
 <p><center> and M*ch*g*n still sucks!</center>
 <br></p>
-<p align=center>&copy; 2007 D. Norris Inc., Property of Dr Dave</p>
+<p align=center>&copy; 2006 D. Norris Inc., Property of Dr Dave</p>
 
 </body>
 </html>
