--- a/osu12.html
+++ b/osu12.html
@@ -32,7 +32,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <td>Sept 22</td><td><A href="http://uabsports.cstv.com/sports/m-footbl/albr-m-footbl-body.html"> UAB </a> (Alumni Band)  </td><td> Noon BTN </td><td>  W 29 - 15 </td><td>BMiller:2 TD, 143 yd P, 64 R </td></tr>
 
-<td>Sept 29</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td>3:30 ABC </td><td>  W 17 - 16</td><td> BMiller: 1 TD, 136 yd R, 179 P</td><td></td></tr>
+<td>Sept 29</td><td><A href="http://www.fansonly.com/schools/msu/sports/m-footbl/msu-m-footbl-body.html"> @ Michigan State </a> </td><td>3:30 ABC </td><td>  W 17 - 16</td><td> BMiller: 1 TD, 136 yd R, 179 P </td></tr>
 
 <td>Oct 06 </td><td><A href="http://www.huskers.com/SportSelect.dbml?SPID=22&DB_OEM_ID=100"> Nebraska </a> </td><td> 8:00 ABC </td><td> W 63 - 38</td><td> BMiller: 186 R, 127P. CHyde: 140R, 4TD </td></tr>
 
@@ -44,7 +44,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <td>Nov 03 </td><td><A href="http://www.fightingillini.com/htm/football/football.html"> Illinois </a> </td><td> 3:30 ESPN </td><td>  W 52 - 22</td><td> BMiller: 226P, 1TD, 73R; CHyde: 137R, 3 TD </td></tr>
 
-<td>Nov 10 </td><td><A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td><td> </td></tr>
+<td>Nov 10 </td><td><A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td></tr>
 
 <td>Nov 17 </td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx"> @ Wisconsin </a> </td><td> 3:30 ABC </td><td>  W 21 - 14 OT</td><td> BMiller: 48R, 97P CHyde: 87R;2 TD; Leader Division CHAMPS! </td></tr>
 
