--- a/osu13.html
+++ b/osu13.html
@@ -26,11 +26,11 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <td>Sept 21</td><td><A href="http://www.famuathletics.com/SportSelect.dbml?&DB_OEM_ID=25300&SPID=80904&SPSID=606545 "> Florida A & M </a>  </td><td> Noon BTN </td><td>  W 76 - 0 </td><td>KGuiton 6 TD P(record), 215P; EElliot 162R </td></tr>
 
-<td>Sept 28</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx">  Wisconsin </a> </td><td>8:00 pm ABC </td><td>  W 31 - 24</td><td> BMiller: 83R, 198P, 4 TD; CHyde: 85R</td><td></td></tr>
+<td>Sept 28</td><td><A href="http://www.uwbadgers.com/sport_news/fb/headlines/index.aspx">  Wisconsin </a> </td><td>8:00 pm ABC </td><td>  W 31 - 24</td><td> BMiller: 83R, 198P, 4 TD; CHyde: 85R </td></tr>
 
 <td>Oct 05 </td><td><A href="http://nusports.cstv.com/sports/m-footbl/"> @ Northwestern </a> </td><td> 8:00 pm ABC </td><td> W 40 - 30</td><td> BMiller: 203P, 68R; CHyde 168R, 3 TD </td></tr>
 
-<td>Oct 12 </td><td> <A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td><td> </td></tr>
+<td>Oct 12 </td><td> <A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td></tr>
 
 <td>Oct 19 </td><td> <A href="http://hawkeyesports.com/football/index.htm"> Iowa </a> </td><td> 3:30 ABC </td><td>  W 34 - 24  </td><td>BMiller: 102R, 222P, 2TD; CHyde: 149R, 2TD </td></tr>
 
@@ -38,7 +38,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 
 <td>Nov 02 </td><td><A href="http://www.purduesports.com/sports/m-footbl/pur-m-footbl-body.html"> @ Purdue </a> </td><td> Noon BTN </td><td>  W 56 - 0 </td><td> Note </td></tr>
 
-<td>Nov 09 </td><td><A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .  </td><td> </td></tr>
+<td>Nov 09 </td><td><A href=""> BYE </a> </td><td> ---  </td><td>  . </td><td> .   </td></tr>
 
 <td>Nov 16 </td><td><A href="http://www.fightingillini.com/sports/m-footbl/ill-m-footbl-body.html"> @ Illinois </a> </td><td> Noon ESPN </td><td>  W 60 - 35</td><td> CHyde: 5 TDs; BMiller 2 TD </td></tr>
 
