--- a/osu14.html
+++ b/osu14.html
@@ -25,7 +25,7 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <td>Sept 13 </td><td><A href=""> Kent State </a> </td><td> Noon ABC/ESPN/2 </td><td> W 66 - 0 </td><td> JTB 312P, 6 TDs; Samuel 100R, 2TD </td></tr>
 <td>Sept 20 </td><td><A href=""> BYE </a> </td><td> --- </td><td> .  </td><td> . </td></tr>
 <td>Sept 27 </td><td><A href=""> Cincinnati  </a> </td><td> 6:00 BTN </td><td> W 50 - 28 </td><td> JTB 330P, 4 TD; EzE 182 R; 45 first downs </td></tr>
-<td>Oct 04 </td><td><A href=""> @ Maryland </a> </td><td>Noon ABC </td><td>  W 52 - 24</td><td> JTB 267P, 103R,5 TD; EzE 139R</td><td></td></tr>
+<td>Oct 04 </td><td><A href=""> @ Maryland </a> </td><td>Noon ABC </td><td>  W 52 - 24</td><td> JTB 267P, 103R,5 TD; EzE 139R </td></tr>
 <td>Oct 11 </td><td><A href=""> BYE </a> </td><td> --- </td><td> .  </td><td> . </td></tr>
 <td>Oct 18 </td><td><A href=""> Rutgers </a> </td><td> 3:30 ABC/ESPN/2 </td><td> W 56 - 17 </td><td> JTB 107R, 261P, 5 TD </td></tr>
 <td>Oct 25 </td><td><A href="http://www.gopsusports.com/sports/m-footbl/"> @ Penn State </a> </td><td> 8:00 ABC/ESPN/2 </td><td> W 31 - 24 2OT </td><td> Eze 119R; JTB 94R, 74P,3TD </td></tr>
