--- a/osu15.html
+++ b/osu15.html
@@ -3,9 +3,7 @@
 <html>
 <head><title>The David, Debra and Daniel Norris Homepage </title></head>
 
-
 <BODY background="Images/bg-paper.gif" BGCOLOR="#A4C8F0">
-
 
 <!-- LAST MODIFIED DATE -->
 <p >
@@ -21,12 +19,11 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <center><h1> 2015 </h1><br>
 <table border="1" align="center" >
 
-
 <td>Sept 07</td><td><A href=""> @ Virginia Tech </a> </td><td> 8:00 ESPN </td><td> W 42 - 24 </td><td> (Labor Day) </td></tr>
 <td>Sept 12</td><td><A href=""> Hawaii </a> </td><td> 3:30 BTN </td><td> W 38 - 0 </td><td> note </td></tr>
 <td>Sept 19</td><td><A href=""> Northern Illinois  </a> </td><td> 3:30 </td><td> W 20 - 13 </td><td> note </td></tr>
 <td>Sept 26</td><td><A href=""> Western Michigan  </a> </td><td> 3:30 </td><td> W 38 - 12 </td><td> note </td></tr>
-<td>Oct 03 </td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana </a> </td><td> 3:30 ABC </td><td>  W 34 - 27</td><td> note</td><td></td></tr>
+<td>Oct 03 </td><td><A href="http://www.indiana.edu/~athlweb/graphic/sports/football.html"> @ Indiana </a> </td><td> 3:30 ABC </td><td>  W 34 - 27</td><td> note </td></tr>
 <td>Oct 10 </td><td><A href="http://"> Maryland </a> </td><td> Noon </td><td> W 49 - 28  </td><td> Homecoming </td></tr>
 <td>Oct 17 </td><td><A href=""> Penn State </a> </td><td> 8:00 ABC </td><td> W 38 - 10 </td><td> note </td></tr>
 <td>Oct 24 </td><td><A href=""> @ Rutgers </a> </td><td> 8:00 ABC/ESPN </td><td> W 49 - 7 </td><td> note </td></tr>
