--- a/dave_1.html
+++ b/dave_1.html
@@ -83,6 +83,8 @@
 <A HREF="http://www.htmlvalidator.com"> HTML Validator </A> --
 <A HREF="http://www.dexnet.com"> HomeSite HTML Editor </A> --
 <br>
+<A HREF="https://digital.com/tools/html-cheatsheet/"> HTML Cheatsheet </A> --
+<A HREF="https://www.w3schools.com/"> HTML w3schools </A> --
 <A HREF="http://www.opposite.com"> HTML Tools </A> --
 <A HREF="http://www.htmlhelp.com"> HTML Help </A> --
 <A HREF="http://www.sandia.gov/sci_compute/html_ref.html"> HTML Reference </A> --
