--- a/dave_1.html
+++ b/dave_1.html
@@ -76,18 +76,14 @@
 <A HREF="http://web.mit.edu/network/pgp.html"> PGP page </A> --
 <A href="http://www.vbdesigns.com/mordor"> Un-Official Mordor Game Page </A> --
 <br>
-<A HREF="http://www.pages.org/javascript"> JavaScript stuff </A> --
-<A HREF="http://www.w3.org/pub/WWW/TR/REC-CSS1"> HTML Style sheets </A> --
+<A HREF="https://www.javascript.com/"> JavaScript stuff </A> --
+<A HREF="https://www.w3.org/TR/CSS1/"> HTML Style sheets </A> --
 <br>
-<A HREF="http://www.q-d.com"> WebMania HTML Editor </A> --
 <A HREF="http://www.htmlvalidator.com"> HTML Validator </A> --
-<A HREF="http://www.dexnet.com"> HomeSite HTML Editor </A> --
 <br>
 <A HREF="https://digital.com/tools/html-cheatsheet/"> HTML Cheatsheet </A> --
 <A HREF="https://www.w3schools.com/"> HTML w3schools </A> --
-<A HREF="http://www.opposite.com"> HTML Tools </A> --
 <A HREF="http://www.htmlhelp.com"> HTML Help </A> --
-<A HREF="http://www.sandia.gov/sci_compute/html_ref.html"> HTML Reference </A> --
 <br>
 <A HREF="http://www.GIFWorld.com"> Animated GIFs </A> --
 <br>
