--- a/index.html
+++ b/index.html
@@ -49,19 +49,15 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h1> 2020 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td>Thur TBA</td><td>W </td><td>note</td></tr>
-<tr><td>Sep 12</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 19</td><td class="has-text-align-left" data-align="left">@ Purdue      </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 26</td><td class="has-text-align-left" data-align="left">Indiana       </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 03</td><td class="has-text-align-left" data-align="left">-- Bye --     </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 10</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 17</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td></td><td></td><td></td></tr>
-<tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">Michigan      </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Maryland      </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">-- Bye --     </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Iowa          </td><td></td><td></td><td></td></tr>
-<tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">B1G Championship </td><td></td><td></td><td></td></tr>
+
+<tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td>Noon Fox </td><td>---score---</td><td>--- Note ---</td></tr>
+<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td>    </td><td></td><td></td></tr>
+<tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td>    </td><td></td><td></td></tr>
+<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td>    </td><td></td><td></td></tr>
+<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td>    </td><td></td><td></td></tr>
+<tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td>    </td><td></td><td></td></tr>
+<tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td>    </td><td></td><td></td></tr>
+<tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td>    </td><td></td><td></td></tr>
 
 <!-- /wp:table -->
 </table>
