--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 
 <tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td>Noon Fox </td><td> W 52 - 17</td><td>--- Note ---</td></tr>
-<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td> 7:30 ABC</td><td>          </td></td>          </td></tr>
+<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td> 7:30 ABC</td><td>          </td><td>          </td></tr>
 <tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td>    </td><td>          </td><td>          </td></tr>
 <tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td>    </td><td>          </td><td>          </td></tr>
 <tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td>    </td><td>          </td><td>          </td></tr>
