--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td> Noon Fox </td><td> W 52 - 17 </td><td>--- Note ---</td></tr>
 <tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td> 7:30 ABC </td><td> W 38 - 25 </td><td>          </td></tr>
 <tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td> 7:30 BTN </td><td> W 49 - 27 </td><td>          </td></tr>
-<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td> 3:30 BTN </td><td>          </td><td>          </td></tr>
-<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td>    </td><td>          </td><td>          </td></tr>
-<tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td>    </td><td>          </td><td>          </td></tr>
+<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td> Cancelled </td><td>          </td><td>          </td></tr>
+<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td> Noon Fox  </td><td> W 42 - 35</td><td>          </td></tr>
+<tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td> Noon    </td><td>          </td><td>          </td></tr>
 <tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td>    </td><td>          </td><td>          </td></tr>
 <tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td>    </td><td>          </td><td>          </td></tr>
 
