--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td> Cancelled </td><td>          </td><td>          </td></tr>
 <tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td> Noon Fox  </td><td> W 42 - 35</td><td>          </td></tr>
 <tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
-<tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> Noon ABC   </td><td>          </td><td>          </td></tr>
-<tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td> Noon ABC   </td><td>          </td><td>          </td></tr>
-
+<tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> Noon ABC   </td><td> W 52 - 12  </td><td>          </td></tr>
+<tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
+<tr><td>Dec 19</td><td class="has-text-align-left" data-align="left">Northwestern @B1G Champ  </td><td> Noon Fox  </td><td>          </td><td>          </td></tr>
 <!-- /wp:table -->
 </table>
 
