--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
 <tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> Noon ABC   </td><td> W 52 - 12  </td><td>          </td></tr>
 <tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
-<tr><td>Dec 19</td><td class="has-text-align-left" data-align="left">Northwestern @B1G Champ  </td><td> Noon Fox  </td><td>          </td><td>          </td></tr>
+<tr><td>Dec 19</td><td class="has-text-align-left" data-align="left">Northwestern @B1G Champ  </td><td> Noon Fox  </td><td>  W 22 - 10 </td><td>          </td></tr>
+
+</table></center>
+<center><h3>Jan 01, 2021  CFP Sugar Bowl vs. Clemson: 8:00 ESPN  <font color=red>(  ) </font></h3></center>
+
 <!-- /wp:table -->
 </table>
 
