--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 </table></center>
 <center><h3>Jan 01, 2021  CFP Sugar Bowl vs. Clemson: 8:00 ESPN  <font color=red>(  ) </font></h3></center>
+<center><h3>Jan 11, 2021  Natl Champ Game vs. Alabama: 8:00 ESPN  <font color=red>(  ) </font></h3></center>
 
 <!-- /wp:table -->
 </table>
