--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Dec 19</td><td class="has-text-align-left" data-align="left">Northwestern @B1G Champ  </td><td> Noon Fox  </td><td>  W 22 - 10 </td><td>          </td></tr>
 
 </table></center>
-<center><h3>Jan 01, 2021  CFP Sugar Bowl vs. Clemson: 8:00 ESPN  <font color=red>(  ) </font></h3></center>
-<center><h3>Jan 11, 2021  Natl Champ Game vs. Alabama: 8:00 ESPN  <font color=red>(  ) </font></h3></center>
+<center><h3>Jan 01, 2021  CFP Sugar Bowl vs. Clemson: 8:00 ESPN  (W 49 - 28 ) </h3></center>
+<center><h3>Jan 11, 2021  Natl Champ Game vs. Alabama: 8:00 ESPN  <font color=red>(L 24 - 52 ) </font></h3></center>
 
 <!-- /wp:table -->
 </table>
