--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p>Benvenuto al mio Webpage! Willkommen zu meinem Webpage! Welcome to my Webpage!
 <p>
 Hello....My Name is <A href="dave.html">David </A> and I live in 
-<A href="Images/scioto.jpg">Southern Ohio </A> with
-my wife <A href="deb.html">Debra </A>, son <A href="daniel/daniel.html"> Daniel</A>, and dog <A href="buffy.html">Buffy</A>. 
+<A href="Images/scioto.jpg">Southern Ohio </A> with 2 cats.
 </p>
-<center><img src="Images/an-dogrun.gif" alt="dogrun" ></center>
-<p>
 See our <A href="ccf.html"> "adopted" children </A> 
 </p>
 
@@ -46,47 +43,40 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
 <!--......................................................................................................-->
-<center><h1> 2020 </h1><br></center>
+<center><h1> 2021 </h1><br></center>
 <table border="1" align="center" >
-
-
-<tr><td>Oct 24</td><td class="has-text-align-left" data-align="left">Nebraska      </td><td> Noon Fox </td><td> W 52 - 17 </td><td>--- Note ---</td></tr>
-<tr><td>Oct 31</td><td class="has-text-align-left" data-align="left">@ Penn State  </td><td> 7:30 ABC </td><td> W 38 - 25 </td><td>          </td></tr>
-<tr><td>Nov 07</td><td class="has-text-align-left" data-align="left">Rutgers       </td><td> 7:30 BTN </td><td> W 49 - 27 </td><td>          </td></tr>
-<tr><td>Nov 14</td><td class="has-text-align-left" data-align="left">@ Maryland    </td><td> Cancelled </td><td>          </td><td>          </td></tr>
-<tr><td>Nov 21</td><td class="has-text-align-left" data-align="left">Indiana       </td><td> Noon Fox  </td><td> W 42 - 35</td><td>          </td></tr>
-<tr><td>Nov 28</td><td class="has-text-align-left" data-align="left">@ Illinois    </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
-<tr><td>Dec 05</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> Noon ABC   </td><td> W 52 - 12  </td><td>          </td></tr>
-<tr><td>Dec 12</td><td class="has-text-align-left" data-align="left">Michigan      </td><td> Cancelled   </td><td>          </td><td>          </td></tr>
-<tr><td>Dec 19</td><td class="has-text-align-left" data-align="left">Northwestern @B1G Champ  </td><td> Noon Fox  </td><td>  W 22 - 10 </td><td>          </td></tr>
-
+  <tr><td>Sep 02</td><td class="has-text-align-left" data-align="left">@ Minnesota    </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Sep 11</td><td class="has-text-align-left" data-align="left">Oregon         </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Sep 18</td><td class="has-text-align-left" data-align="left">Tulsa          </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Sep 25</td><td class="has-text-align-left" data-align="left">Akron          </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Oct 02</td><td class="has-text-align-left" data-align="left">@ Rutgers      </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Oct 09</td><td class="has-text-align-left" data-align="left">Maryland       </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Oct 23</td><td class="has-text-align-left" data-align="left">@ Indiana      </td><td> TBA   </td><td> W    </td><td>--- Note ---</td></tr>
+  <tr><td>Oct 30</td><td class="has-text-align-left" data-align="left">Penn State     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 06</td><td class="has-text-align-left" data-align="left">@ Nebraska     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 13</td><td class="has-text-align-left" data-align="left">Purdue         </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 20</td><td class="has-text-align-left" data-align="left">Michigan State </td><td> TBA   </td><td> W    </td><td>          </td></tr>
+  <tr><td>Nov 27</td><td class="has-text-align-left" data-align="left">@ Michigan     </td><td> TBA   </td><td> W    </td><td>          </td></tr>
 </table></center>
-<center><h3>Jan 01, 2021  CFP Sugar Bowl vs. Clemson: 8:00 ESPN  (W 49 - 28 ) </h3></center>
-<center><h3>Jan 11, 2021  Natl Champ Game vs. Alabama: 8:00 ESPN  <font color=red>(L 24 - 52 ) </font></h3></center>
-
+<center><h3>Jan 01, 2021  some Bowl vs.  </h3></center>
 <!-- /wp:table -->
 </table>
-
 <!--......................................................................................................-->
 
 <h3>
-
-
 <hr />
 <center><A href="OSU/osu_seat.jpg">Ohio Stadium seating chart </A> </center>
 
 <hr />
 <!--img align=bottom alt="New!" src="Images/new3.gif"-->
 <center>
-<a href="osu2020.html"> 2020 Football schedule </a>
-<p>
-<a href="osu2021.html"> 2021 Football schedule </a>
-<p>
 <a href="osu2022.html"> 2022 Football schedule </a>
 <p>
 <a href="osu2023.html"> 2023 Football schedule </a>
 <p>
 <hr />
+<a href="osu20.html"> 2020 Football results </a>
+<p>
 <a href="osu19.html"> 2019 Football results </a>
 <p>
 <a href="osu18.html"> 2018 Football results </a>
