update Thanksgiving photos

--- a/photoindex.html
+++ b/photoindex.html
@@ -67,6 +67,9 @@ Welcome to my photo page!</H1>
 <LI><a href="ROS35.html" > OH US 35 construction Feb 2004 </a></LI>
 <LI><a href="Fall2007.html" > Fall 2007 </a></LI>
 <LI><a href="Thanksgiving2009.html" > Thanksgiving 2009 </a></LI>
+<LI><a href="Thanksgiving2014.html" > Thanksgiving 2014 </a></LI>
+<LI><a href="Thanksgiving2015.html" > Thanksgiving 2015 </a></LI>
+<LI><a href="Thanksgiving2016.html" > Thanksgiving 2016 </a></LI>
 
 </UL>
 </center>
