--- a/Thanksgiving2002.html
+++ b/Thanksgiving2002.html
@@ -19,15 +19,15 @@ document.write("<I>This Page Was Last Updated:"+document.lastModified+"</I>");
 <p align=center> 
 Thanksgiving 2002
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2002/Olympus364.JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2002/Olympus364.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2002/Olympus365.JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2002/Olympus365.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2002/Olympus367.JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2002/Olympus367.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
 <p align=center><img src="Thanksgiving2002/Olympus368.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
-<p align=center><img src="Thanksgiving2002/Olympus369.JPG" align="top"> <p align=center>
+<p align=center><img src="Thanksgiving2002/Olympus369.jpg" align="top"> <p align=center>
 <hr size=3 width=90%> 
 
 <center>The END!</center>
